--- a/.gitignore
+++ b/.gitignore
@@ -110,11 +110,11 @@ ENV/
 env.bak/
 venv.bak/
 
-# Spyder project2 settings
+# Spyder project settings
 .spyderproject
 .spyproject
 
-# Rope project2 settings
+# Rope project settings
 .ropeproject
 
 # mkdocs documentation
